// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell> has "cell" css class 1`] = `
<td
  className="cell"
  onClick={[Function]}
  onContextMenu={[Function]}
>
   
</td>
`;

exports[`<Cell> initialised with an adjacent count, renders that count with "count-" class 1`] = `
<td
  className="cell checked count-1"
  onClick={[Function]}
  onContextMenu={[Function]}
>
  1
</td>
`;

exports[`<Cell> initialised with checked has "checked" class 1`] = `
<td
  className="cell checked"
  onClick={[Function]}
  onContextMenu={[Function]}
>
   
</td>
`;

exports[`<Cell> initialised with marked has "marked" class 1`] = `
<td
  className="cell marked"
  onClick={[Function]}
  onContextMenu={[Function]}
>
  !
</td>
`;

exports[`<Cell> initialised with mine has "mine" class 1`] = `
<td
  className="cell mine"
  onClick={[Function]}
  onContextMenu={[Function]}
>
  <img
    alt="mine"
    className="mineImg spinning"
    src="mine.svg"
  />
</td>
`;

exports[`<Cell> initialised with mine shows mine img 1`] = `
<td
  className="cell mine"
  onClick={[Function]}
  onContextMenu={[Function]}
>
  <img
    alt="mine"
    className="mineImg spinning"
    src="mine.svg"
  />
</td>
`;

exports[`<Cell> with a marked mine show an X 1`] = `
<td
  className="cell marked mine"
  onClick={[Function]}
  onContextMenu={[Function]}
>
  X
</td>
`;
